# tree-sitter-todofiles

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  what.TODO
bindings/c/: tree-sitter-todofiles.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_todofiles/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTodofiles/: todofiles.h
bindings/swift/TreeSitterTodofilesTests/: TreeSitterTodofilesTests.swift
example/: simple.TODO  simple2.todo  what.TODO
queries/: highlights.scm
queries/todofiles/: highlights.scm
src/: grammar.json  node-types.json  parser.c
