[package]
name = "tree-sitter-todofiles"
description = "tree sitter grammar for dotTodo files"
version = "0.1.0"
authors = ["Anders Johannessen <tstodo@mikosaurus.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "todofiles"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mikosaurus/tree-sitter-todofiles"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
